# importer

./: .gitignore  .pre-commit-config.yaml  JSON_VARIANT_FEATURE.md  PERFORMANCE.md  README.md  parser.py  pyproject.toml
.github/workflows/: ci.yml
config_examples/: example_csv_config.json  example_fixedwidth_config.json  example_json_config.json  example_json_variant.json  example_json_variant_simple.json  example_with_file_mask.json  example_xml_config.json  example_xml_json_variant.json  example_zip_test.json
input/: prod_fixed.txt  prod_json.json
output/: .gitkeep
prod_configs/: csv.json  fixed.json  json.json  xml.json
scripts/: check_health.py  demo_all_compression.py  demo_file_mask_with_zip.py  test_compression.py
src/multi_format_parser/: __init__.py  async_orchestrator.py  casting.py  cli.py  config_models.py  csv_writer.py  formula_utils.py  json_utils.py  models.py  observability.py  orchestrator.py  streaming.py  utils.py  validators.py  xpath_utils.py  zip_utils.py
src/multi_format_parser/parsers/: __init__.py  base_parser.py  csv_parser.py  fixed_width_parser.py  json_parser.py  xml_parser.py
tests/: __init__.py  conftest.py  test_async_orchestrator.py  test_batch_integration.py  test_config_models.py  test_continue_on_error.py  test_csv_parser.py  test_fixed_width_parser.py  test_json_parser.py  test_json_variant.py  test_validation.py  test_xml_parser.py  test_zip_handling.py  test_zip_integration.py
